--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Pyrogram~=2.0.106
+git+https://github.com/PyrogramMod/PyrogramMod@main  # Pyrogram~=2.0.106
 redis[hiredis]~=5.0.1
+hiredis~=2.2.3
 TgCrypto~=1.2.5
 uvloop~=0.19.0
